--- a/src/roles/initsys/templates/gpinitsystem_config.j2
+++ b/src/roles/initsys/templates/gpinitsystem_config.j2
@@ -14,7 +14,7 @@ SEG_PREFIX=gpseg
 
 #### Base number by which primary segment port numbers 
 #### are calculated.
-PORT_BASE=6000
+PORT_BASE=16000
 
 #### File system location(s) where primary segment data directories 
 #### will be created. The number of locations in the list dictate
@@ -49,13 +49,13 @@ ENCODING=UNICODE
 
 #### Base number by which mirror segment port numbers 
 #### are calculated.
-MIRROR_PORT_BASE=7000
+#MIRROR_PORT_BASE=17000
 
 #### File system location(s) where mirror segment data directories 
 #### will be created. The number of mirror locations must equal the
 #### number of primary locations as specified in the 
 #### DATA_DIRECTORY parameter.
-declare -a MIRROR_DATA_DIRECTORY=({{ mirror_path_all.stdout }} )
+#declare -a MIRROR_DATA_DIRECTORY=({{ mirror_path_all.stdout }} )
 
 
 ################################################
